更正 float layout & flex layout

--- a/ch01/float1.html
+++ b/ch01/float1.html
@@ -1,49 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        *{box-sizing: border-box;}
-        body{
-            margin: 0;
-        }
-        #footer,#header{
-            height: 20vh;
-            background-color: aqua;
-            
-        }
-        #main{
-            height: 60vh;
-        }
-        #article{
-            float: left;
-            width: 20vw;
-            height: 60vh;
-            background-color: bisque;
-        }
-        #nav{
-            float: right;
-            width: 20vw;
-            background-color: gray;
-            height: 60vh;
-        }
-        #aside{
-            width: 100vw;
-            height: 60vh;
-            background-color: blue;
-            
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="style-float1.css">
 </head>
 <body>
-    <div id="header">header</div>
-    <div id="main">
-        <div id="article">article</div>
+  <header>header</header>
+  <main>
+    <article>article</article>
 
-        <div id="aside">aside</div>
-    </div>
-    <div id="footer">footer</div>
+    <aside>aside</aside>
+
+    <div class="test">test</div>
+  </main>
+  <footer>footer</footer>
 </body>
 </html>
