--- a/ch01/作業1.html
+++ b/ch01/作業1.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style1.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="style1.css">
 </head>
 <body>
-    <header>header</header>
-    <div id="main">
-        <article>article</article>
-        <nav>nav</nav>
-        <aside>aside</aside>
-    </div>
-    <footer>Footer</footer>
+  <header>header</header>
+  <!-- 不要用id id是唯一值通常用於 javascript 或者 後端方面 -->
+  <div class="main">
+    <nav>nav</nav>
+    <article>article</article>
+    <aside>aside</aside>
+  </div>
+  <footer>Footer</footer>
 </body>
 </html>
