--- a/ch02/position.html
+++ b/ch02/position.html
@@ -4,9 +4,107 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>position</title>
+  <style>
+    *{ box-sizing: border-box;}
+    div {
+      border : 1px solid black;
+    }
+    .q1 {
+      position : relative;
+      width: 400px;
+      height: 400px;
+      padding: 0px;
+      margin: 0px;
+    }
+    .main_1 {
+      position : absolute;
+      left : 0px;
+      top : 0px;
+      width : 10px;
+      height : 10px;
+    }
+    .main_2 {
+      position : absolute;
+      right : 0px;
+      top : 0px;
+      width : 10px;
+      height : 10px;
+    }
+    .main_3 {
+      position : absolute;
+      right : 0px;
+      bottom : 0px;
+      width : 10px;
+      height : 10px;
+    }
+    .main_4 {
+      position : absolute;
+      left : 0px;
+      bottom : 0px;
+      width : 10px;
+      height : 10px;
+    }
+    .main_5 {
+      position : absolute;
+      left : 195px;
+      bottom : 195px;
+      width : 10px;
+      height : 10px;
+    }
+    .fix {
+      width : 50px ;
+      height: 50px ;
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      background-color: blue;
+
+    }
+    
+  </style>
 </head>
-<body>
 <!-- 1. 用position 方式定位 上, 下, 左, 右, 中間 五個方位 -->
 <!-- 2. fixed 定位在正中間 -->
+<body>
+  <div class="q1">
+    <div class="main_1"></div>
+    <div class="main_2"></div>
+    <div class="main_3"></div>
+    <div class="main_4"></div>
+    <div class="main_5"></div>
+  </div>
+  <div class="fix"></div>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
 </body>
 </html>
